--- a/Public/index.html
+++ b/Public/index.html
@@ -41,7 +41,7 @@
                             <option>Seleccione un comercio...</option>
                         </select>
                     </div>
-                    <button type="button" class="btn btn-success" onclick="agregar()">agregar producto</button>
+                    <button type="button" class="btn" onclick="agregar()">agregar producto</button>
                 </div>
                 <div class="col">
                     <h2>Listado de Productos</h2>
