--- a/Public/index.html
+++ b/Public/index.html
@@ -10,11 +10,28 @@
 </head>
 <body onLoad="myOnLoad()">
     <header>
-        <div class="container">
-            <h2>Grupo 12 FPW</h2>
-            <h2>Proyecto 02</h2>
-            <img class="logo" src="img/logo.png" alt="">
-        </div>
+        <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand"><img class="logo" src="img/lobo.png" alt=""></a>
+                <h3>Grupo 12 FPW</h3>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-white mx-2 expandir" href="https://github.com/Joaset/Proyecto01TorresFloresJoaquinVictor" target="_blank">Proyecto 01: HTML-CSS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white mx-2 expandir" href="https://github.com/carvlc/proyecto-calculadora-grupo-12" target="_blank">Proyecto 01 JS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white mx-2 expandir" href="https://github.com/Joaset/Proyecto02_JS_Grupo12" target="_blank">Proyecto 02 JS</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="container">
@@ -62,9 +79,9 @@
                 <div class="footer-links">
                     <h4>Integrantes</h4>        
                     <ul>
-                        <li><a href="#">Banzan Cèsar Emilio</a></li>
-                        <li><a href="#">Torres Flores Joaquin Victor</a></li>
-                        <li><a href="#">Vilca Carlos Norberto Salvador</a></li>
+                        <li><a href="https://github.com/cesarbanzan" target="_blank">Banzan Cèsar Emilio</a></li>
+                        <li><a href="https://github.com/Joaset" target="_blank">Torres Flores Joaquin Victor</a></li>
+                        <li><a href="https://github.com/carvlc" target="_blank">Vilca Carlos Norberto Salvador</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
@@ -79,8 +96,9 @@
                     </div>
                 </div>
             </div>
-            <p>&copy; Grupo 12 FPW 2023</p>     
+            <!-- <p class="copy">&copy; Grupo 12 FPW 2023</p>      -->
         </div>
+        <p class="copy">&copy; Grupo 12 FPW 2023</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="../src/index.js"></script>
